<resources>
    <string name="app_name">SaveMoney</string>
    <string name="Logo">White logo of application</string>
    <string name="Welcome">Weclome!</string>
    <string name="Createnewaccount">Create a new account</string>
    <string name="Login">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail address</string>
    <string name="Required">Required</string>
    <string name="LoginToContinue">Log in to continue</string>
    <string name="Back">Back</string>
    <string name="InvalidEmailAddress">Invalid Email Address</string>
    <string name="Minimum8">Minimum 8 characters</string>
    <string name="Upper_case">Must Contain 1 Upper-case Character</string>
    <string name="Lower_case">Must Contain 1 Lower-case Character</string>
    <string name="Special_Character">Must Contain 1 Special Character</string>
    <string name="RegisterTo">Register to continue</string>
    <string name="Already">Already have an account?</string>
    <string name="Forgot">Forgot password?</string>
    <string name="Exit">Exit</string>
    <string name="Settings">Settings</string>
    <string name="PasswordRecovery">Password Recovery</string>
    <string name="Recover">Recover Password</string>
    <string name="Product1">Product 1</string>
    <string name="Product2">Product 2</string>
    <string name="Weight">Package weight in grams</string>
    <string name="Price">Package price</string>
    <string name="Compare">Compare</string>
    <string name="Clear">Clear</string>
    <string name="Save">Save</string>
    <string name="ResultOfComparison">The result of the comparison will be displayed here</string>
    <string name="FillTheInformation">You have not filled in the information about the second product</string>
    <string name="FillTheInformation2">You have not filled in the information about the first product</string>
    <string name="Nothing">There is nothing to compare yet</string>
    <string name="Update">Last update:</string>
</resources>