<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ForgotFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bolditalic"
        android:text="@string/PasswordRecovery"
        android:textColor="@color/seaweed"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainerForRecovery"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Email"
        app:helperText="@string/Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTextForRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"

            android:inputType="textEmailAddress|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRecoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Recover"
        app:layout_constraintEnd_toEndOf="@+id/emailContainerForRecovery"
        app:layout_constraintStart_toStartOf="@+id/emailContainerForRecovery"
        app:layout_constraintTop_toBottomOf="@+id/emailContainerForRecovery" />
</androidx.constraintlayout.widget.ConstraintLayout>